--- a/css/style.css
+++ b/css/style.css
@@ -304,17 +304,17 @@ a:hover {
     line-height: 44px;
 }
 
-.navbar-brand ../img {
+.navbar-brand img {
     max-height: 200px;
     margin: 0 5px 0 0;
     display: inline;
 }
 
-.navbar-brand ../img[src$=svg] {
+.navbar-brand img[src$=svg] {
     min-width: 100px;
 }
 
-.nav-center .navbar-brand ../img {
+.nav-center .navbar-brand img {
     margin: 0;
 }
 
