--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,8 @@ p{
 
 
 .tight-width-whitespace {
-    max-width: 600px;
+/*    max-width: 600px; */
+    max-width: 700px;
     margin: auto auto auto auto;
 }
 
