--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,9 @@ a:hover {
     position: relative;
     z-index: 2;
 }
-
+#form_1{
+    margin:auto;
+}
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
