--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,6 @@ a:hover {
 
 .bloc-lg {
     padding: 100px 50px;
-    margin:auto;
-    justify-content: center;
 }
 
 .bloc-md {
@@ -287,7 +285,6 @@ a:hover {
 
 #bloc-1-hero h1 {
     font-size: 32px;
-    text-align: center;
 }
 
 .navbar {
@@ -364,9 +361,7 @@ a:hover {
     position: relative;
     z-index: 2;
 }
-#form_1{
-    margin:auto;
-}
+
 @media (min-width: 768px) {
     .site-navigation {
         position: absolute;
@@ -650,20 +645,13 @@ h3,
 h4,
 h5,
 h6,
+p,
 label,
 .btn,
 a {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
-    text-align: center;
-}
-p{
-    font-family: "helvetica";
-    font-weight: 700;
-    font-size: 26px;
-    color: white;
-    text-align: center;   
 }
 
 .container {
@@ -671,10 +659,7 @@ p{
 }
 
 .hero-bloc-text {
-    font-family: "helvetica";
-    font-size: 54px;
-    font-weight: 700;
-/*    font-size: 38px; */
+    font-size: 38px;
 }
 
 .hero-bloc-text-sub {
@@ -691,10 +676,12 @@ p{
     margin: auto auto auto auto;
 }
 
+p {
+    font-size: 11px;
+}
 
 .tight-width-whitespace {
-/*    max-width: 600px; */
-    max-width: 700px;
+    max-width: 600px;
     margin: auto auto auto auto;
 }
 
@@ -702,6 +689,7 @@ p{
     font-size: 20px;
     font-family: "Open Sans";
 }
+
 .cta-hero {
     margin-top: 22px;
     color: #FFFFFF!important;
@@ -710,6 +698,7 @@ p{
     font-size: 16px;
     font-weight: 700;
 }
+
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
@@ -781,15 +770,14 @@ h4 {
     background-color: #364577;
 }
 
-.bgc-atomic-tangerine{
+.bgc-atomic-tangerine {
     background-color: #F3976C;
 }
+
 .tc-white {
-    color: white;
-}
-.tc-tangerine {
     color: #F3976C!important;
 }
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF!important;
