correction w3c bootstrap.css taille images

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,9 @@ a:hover {
 .bloc-sm {
     padding: 20px 50px;
 }
-
+.logo-w3c-css{
+    left:0;
+}
 .bg-center,
 .bg-l-edge,
 .bg-r-edge,
@@ -682,6 +684,10 @@ p {
 
 .tight-width-whitespace {
     max-width: 600px;
+    /* Correction CD debut 
+    max-width: 600px;*/
+    max-width: 1200px;
+/* Correction CD debut */
     margin: auto auto auto auto;
 }
 
