--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -156,6 +156,9 @@ button,
 html input[type=button],
 input[type=reset],
 input[type=submit] {
+    /* ajout CD debut */
+    appearance: button;
+    /* ajout CD fin */
     -webkit-appearance: button;
     cursor: pointer
 }
@@ -192,6 +195,9 @@ input[type=search] {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+    /* ajout CD debut */
+    appearance: textfield;
+    /* ajout CD fin */
     -webkit-appearance: textfield
 }
 
@@ -3192,6 +3198,9 @@ textarea.form-control {
 }
 
 input[type=search] {
+    /* ajout CD debut */
+    appearance: none;
+    /* ajout CD fin */
     -webkit-appearance: none
 }
 
@@ -4286,7 +4295,9 @@ tbody.collapse.in {
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
-    border-top: 4px solid\9;
+    /* Correction CD debut 
+    border-top: 4px solid\9;*/
+    /* Correction CD fin */
     border-right: 4px solid transparent;
     border-left: 4px solid transparent
 }
@@ -4373,7 +4384,6 @@ tbody.collapse.in {
     cursor: not-allowed;
     background-color: transparent;
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
 }
 
 .open>.dropdown-menu {
@@ -5124,7 +5134,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     max-height: 340px
 }
 
-@media (max-device-width:480px) and (orientation:landscape) {
+@media (max-width:480px) and (orientation:landscape) {
     .navbar-fixed-bottom .navbar-collapse,
     .navbar-fixed-top .navbar-collapse {
         max-height: 200px
@@ -7056,6 +7066,9 @@ button.list-group-item-danger.active:hover {
 }
 
 button.close {
+    /* ajout CD debut */
+    appearance: none;
+    /* ajout CD fin */
     -webkit-appearance: none;
     padding: 0;
     cursor: pointer;
@@ -7682,7 +7695,9 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
+    /* correction CD debut 
     background-color: #000\9;
+    correction CD fin */
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
