--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body {
     font-size:16px;
     /* Correction CD fin */
 }
-
+.plan{
+    width:100%;
+}
 a,
 button {
     transition: all .3s ease-in-out;
