--- a/css/style.css
+++ b/css/style.css
@@ -913,14 +913,18 @@ h4 {
         max-width: 100%
     }
 }
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+/* Correction CD debut 
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {*/
+    @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+/* Correction CD fin */
     .b-parallax {
         background-attachment: scroll;
     }
 }
-
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+/* Correction CD debut 
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {*/
+    @media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+/* Correction CD fin */        
     .b-parallax {
         background-attachment: scroll;
     }
@@ -938,10 +942,12 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
+    /* Correction CD debut
     .bloc {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
     }
+    Correction CD fin */
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -950,8 +956,10 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
+        /* Correction CD debut
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
+        Correction CD fin */
     }
 }
 
