--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
     font-size:16px;
     /* Correction CD fin */
 }
+
+.col-sm-12 {
+    background:transparent; 
+}
 .plan{
     width:100%;
 }
@@ -881,14 +885,6 @@ h4 {
 .ltc-atomic-tangerine:hover {
     color: #c27956!important;
 }
-/* Correction CD debut */
-.dark-tangerine {
-    color: #c27956!important;
-}
-.dark-tangerine:hover {
-    color: #F3976C!important;
-}
-/* Correction CD fin */
 .icon-dark-slate-blue {
     color: #364577!important;
     border-color: #364577!important;
