test de couleurs 3

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@ body {
     /* Correction CD fin */
 }
 /* Correction CD debut */
-.col-sm-12 h1{
+h1{
     background-color:none; 
 }
-.col-sm-12 p{
+p{
     background-color:none; 
 }
  /* Correction CD fin */
