--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     /* Correction CD debut */
-    background:none;
+    background-color:none;
     /* Correction CD fin */
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
