--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    /* Correction CD debut */
-    background-color:none;
-    /* Correction CD fin */
+    background:#FFF;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -849,7 +847,7 @@ h4 {
 }
 
 .tc-white {
-    color: white!important;
+    color: #F3976C!important;
 }
 .tc-tangerine {
     color: #F3976C!important;
