--- a/css/style.css
+++ b/css/style.css
@@ -15,26 +15,6 @@ h1,
 h2{
     color:white;   
 }
-.fa {
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-}
-.fa-twitter:before {
-    content: "\f099"
-}
-.fa-facebook:before {
-    content: "\f09a"
-}
-.fa-dribbble:before {
-    content: "\f17d"
-}
-.fa-instagram:before {
-    content: "\f16d"
-}
 /* Correction CD fin */
 .plan{
     width:100%;
@@ -98,17 +78,26 @@ a:hover {
 }
 .image-resize-mode{
     width: 100px;
+    height: 100px;
 }
 /* Correction CD debut */
 .img-responsive{
     width: 100%;
+}
+.bg-t-edge{
+    -webkit-background-size: 100%!important;
+    -moz-background-size: 100%!important;
+    -o-background-size: 100%!important;
+    background-size: 100%!important;
 }
 /* Correction CD fin */
 
 .bg-center,
 .bg-l-edge,
 .bg-r-edge,
+* Correction CD debut
 .bg-t-edge,
+Correction CD fin */
 .bg-b-edge,
 .bg-tl-edge,
 .bg-bl-edge,
