--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,9 @@ a:hover {
     -o-background-size: 100%!important;
     background-size: 100%!important;
 }
+.icon-lg {
+    font-size: 60px!important;
+}
 /* Correction CD fin */
 
 .bg-center,
