--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,16 @@ a:hover {
 }
 /* Correction CD debut */
 input,textarea {
-    font-weight: 900;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
     background: #FDDBCB;
     color:black;
     }
 input:focus,textarea:focus{
     border: 5px solid #F3976C;
+}
+input:active,textarea:active{
+    border: 10px solid #F3976C;
 }
 @keyframes non {
     25% {
@@ -57,13 +61,16 @@ input:focus,textarea:focus{
     }
 }
 input:not(:focus):invalid,textarea:not(:focus):invalid {
-    content: "";
     background:  #FDDBCB;
     animation: non 200ms cubic-bezier(.4,.1,.6,.9) 2;
 }
 input:active,textarea:active{
     border: 10px solid #F3976C;
 }
+.form-control {
+    background: #FDDBCB;
+}
+
 /* Correction CD fin */
 /* Correction CD debut
 #page-loading-blocs-notifaction {
@@ -369,6 +376,9 @@ color: #c27956;
 .row-no-gutters .col-sm-4{
     width: 32%;
     display: inline-block;
+}
+.col-sm-4 img{
+    height: 60px;
 }
 /* Correction CD fin */  
 #bloc-1-hero h1 {
