--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1{
     margin-left:auto;
     margin-right:auto;
     background: #c27956;
+    border-radius: 7px;
 }
 .marron{
     color:#522713;
